--- a/TheBlogProject/Views/Blogs/Index.cshtml
+++ b/TheBlogProject/Views/Blogs/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TheBlogProject.Models.Blog>
+﻿@using TheBlogProject.Services.Interfaces
+@inject IImageService imageService
+@model IEnumerable<TheBlogProject.Models.Blog>
 
 @{
     ViewData["Title"] = "Index";
@@ -31,9 +33,6 @@
                 @Html.DisplayNameFor(model => model.ImageData)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageType)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Author)
             </th>
             <th></th>
@@ -58,10 +57,8 @@
                 @Html.DisplayFor(modelItem => item.ProductionStatus)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageData)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageType)
+                    <img src="@imageService.DecodeImage(item.ImageData, item.ImageType)" />
+                
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Author.Id)
