--- a/TheBlogProject/Views/Home/Index.cshtml
+++ b/TheBlogProject/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
-﻿@{
+﻿@using TheBlogProject.Models
+@model IEnumerable<Blog>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            @foreach(var blog in Model)
+            {
+                <h2>@blog.Title</h2>
+                <h3>@blog.Description</h3>
+                <hr />
+            }
+        </div>
+    </div>
 </div>
