--- a/TheBlogProject/Views/Home/Index.cshtml
+++ b/TheBlogProject/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@using TheBlogProject.Models
-@model IEnumerable<Blog>
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
+@using X.PagedList.Web.Common;
+@model IPagedList<Blog>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -15,5 +18,22 @@
                 <hr />
             }
         </div>
+    </div>
+</div>
+
+<!--Add paging controls here.-->
+<div class="row">
+    <div class="col h3">
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    </div>
+</div>
+<div class="row">
+    <div class="col h3">
+        @Html.PagedListPager(Model, page => Url.Action("Index", new {page = page}),
+            new PagedListRenderOptions
+            {
+                LiElementClasses = new string[] {"page-item"},
+                PageClasses = new string[] {"page-link"}
+            })
     </div>
 </div>
