--- a/TheBlogProject/Views/Shared/_Layout.cshtml
+++ b/TheBlogProject/Views/Shared/_Layout.cshtml
@@ -30,6 +30,19 @@
                 </div>
             </div>
         </nav>
+
+        <form asp-action="SearchIndex" asp-controller="Posts">
+            <div class="input-group mt-5">
+                <input type="text" name="SearchTerm" class="form-control" placeholder="Search Term" />
+                <div class="input-group-append">
+                    <button class="btn btn-warning btn-block btn-sm" type="submit">Search</button>
+                </div>
+            </div>
+        </form>
+
+
+
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
