Basic comment functionality

--- a/TheBlogProject/Views/Comments/Index.cshtml
+++ b/TheBlogProject/Views/Comments/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayNameFor(model => model.Post)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author)
+                @Html.DisplayNameFor(model => model.BlogUser)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Moderator)
@@ -73,7 +73,7 @@
                 @Html.DisplayFor(modelItem => item.Post.Abstract)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author.Id)
+                @Html.DisplayFor(modelItem => item.BlogUser.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Moderator.Id)
