--- a/TheBlogProject/Views/Comments/Delete.cshtml
+++ b/TheBlogProject/Views/Comments/Delete.cshtml
@@ -60,10 +60,10 @@
             @Html.DisplayFor(model => model.Post.Abstract)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
+            @Html.DisplayNameFor(model => model.BlogUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author.Id)
+            @Html.DisplayFor(model => model.BlogUser.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Moderator)
