--- a/TheBlogProject/Views/Posts/Details.cshtml
+++ b/TheBlogProject/Views/Posts/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model TheBlogProject.Models.Post
+﻿@using TheBlogProject.Services.Interfaces
+@inject IImageService imageService
+@model TheBlogProject.Models.Post
 
 @{
     ViewData["Title"] = "Details";
@@ -82,3 +84,41 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+<hr />
+
+<div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <form asp-action="Create" asp-controller="Comments" method="post">
+            @Html.Hidden("PostId", Model.Id)
+
+            <div class="form-group">
+                <label class="h2 custom-control-label font-weight-bold">Add Comment</label>
+                <textarea name="body" class="form-control" rows="5"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-dark btn-block btn-sm">Submit</button>
+        </form>
+    }
+    else
+    {
+        <a class="btn btn-block btn-sm btn-dark" asp-area="Identity" asp-page="/Account/Login">Login to add comments</a>
+    }
+</div>
+
+<hr />
+
+<span class="btn btn-sm btn-dark btn-block">@Model.Comments.Count COMMENT(S)</span>
+
+@foreach(var comment in Model.Comments)
+{
+    <div class="media media-border p-0 mb-2 bg-light">
+        <img class="mr-3 mt-3 rounded-circle" style="width:60px;" src="@imageService.DecodeImage(comment.BlogUser.ImageData, comment.BlogUser.ImageType)" />
+        <div class="media-body">
+            <h4>@comment.BlogUser.DisplayName</h4>
+            <small><i>Posted on @comment.Created.ToString("MMM dd, yyyy")</i></small>
+            <p>@comment.Body</p>
+        </div>
+    </div>
+}
